Template HTML index Document

--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
 </head>
 
 <body>
-    <h1>
-        Hello world!
-    </h1>
+    <!-- Header -->
+    <header>
+
+    </header>
+    <!-- /Header -->
+    <!-- Main -->
+    <main>
+
+    </main>
+    <!-- /Main -->
+    <!-- Footer -->
+    <footer>
+
+    </footer>
+    <!-- /Footer -->
+    <!-- Modal -->
+    <!-- /Modal -->
+    <!-- JavaScript -->
+    <!-- /JavaScript -->
 </body>
 
 </html>
