--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
     <!-- Header -->
     <header>
         <nav>
-            <div class="navbar">
+            <div class="navbar container">
                 <div class="navbar-logo">
                     <a href="/">Kunilovsky VA</a>
                 </div>
-                <button>
-                    <span></span>
+                <button id="menu" class="mobile-menu" type="button">
+                    <span class="menu-icon"></span>
                 </button>
-                <ul id="menu" class="navbar-menu">
+                <ul id="menu1" class="navbar-menu">
                     <li class="navbar-item">
                         <a class="navbar-link active" href="#about">Обо мне</a>
                     </li>
                     <li class="navbar-item">
                         <a class="navbar-link" href="#project">Проекты</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a class="navbar-link" href="#project">Блог</a>
                     </li>
                     <li class="navbar-item">
                         <a class="navbar-link" href="#contacts">Контакты</a>
@@ -42,6 +45,9 @@
         <!-- Toggle Theme mode -->
         <button style="display: none;" id="toggle">Сменить тему</button>
         <!-- /Toggle Theme mode -->
+        <div class="message error">
+            test
+        </div>
     </main>
     <!-- /Main -->
     <!-- Footer -->
@@ -53,6 +59,7 @@
     <!-- /Modal -->
     <!-- JavaScript -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/nav.js"></script>
     <script src="assets/js/mode.js"></script>
     <!-- /JavaScript -->
 </body>
