refactor header and components SASS

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     <!-- Main -->
     <main>
         <!-- Toggle Theme mode -->
-        <button style="display: none;" id="toggle">Сменить тему</button>
+        <!-- <button id="toggle">Сменить тему</button> -->
         <!-- /Toggle Theme mode -->
+        
     </main>
     <!-- /Main -->
     <!-- Footer -->
